--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1202,6 +1202,7 @@ display: flex;
 align-items: center;
 font-size: 42px;
 justify-content: center;
+overflow: visible;
 }
 
 .title-block svg {
@@ -1211,6 +1212,7 @@ left: 0;
 width: 100%;
 height: 100%;
 pointer-events: none;
+z-index: 1;
 }
 .title-info{
 	max-width: 400px;
